--- a/src/first.view/makefile
+++ b/src/first.view/makefile
@@ -1,2 +1,5 @@
 moc_widget.cpp: Widget.h
 	moc $(DEFINES) $(INCPATH) $< -o $@
+	
+moc_adicionarwindow.cpp: AdicionarWindow.h
+	moc $(DEFINES) $(INCPATH) $< -o $@
