novos nomes e envento de add

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -8,7 +8,9 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
--include src/first.view/subdir.mk
+-include src/main.view/adicionar/subdir.mk
+-include src/main.view/subdir.mk
+-include src/dto/subdir.mk
 -include src/subdir.mk
 -include subdir.mk
 -include objects.mk
