--- a/Debug/makefile
+++ b/Debug/makefile
@@ -8,38 +8,38 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
--include src/main/window/subdir.mk
--include src/main/viewport/subdir.mk
--include src/main/modelo.interno/subdir.mk
--include src/main/adicionar/objetos/reta/subdir.mk
--include src/main/adicionar/objetos/ponto/subdir.mk
--include src/main/adicionar/objetos/poligono/subdir.mk
--include src/main/adicionar/objetos/subdir.mk
--include src/main/adicionar/subdir.mk
+-include src/viewport/subdir.mk
+-include src/modelo.interno/window/subdir.mk
+-include src/modelo.interno/subdir.mk
 -include src/main/subdir.mk
--include src/dto/subdir.mk
+-include src/dto/geometrico/subdir.mk
 -include src/application/subdir.mk
+-include src/adicionar/objetos/reta/subdir.mk
+-include src/adicionar/objetos/ponto/subdir.mk
+-include src/adicionar/objetos/poligono/subdir.mk
+-include src/adicionar/objetos/subdir.mk
+-include src/adicionar/subdir.mk
 -include subdir.mk
 -include objects.mk
 
 ifneq ($(MAKECMDGOALS),clean)
-ifneq ($(strip $(C++_DEPS)),)
--include $(C++_DEPS)
-endif
-ifneq ($(strip $(C_DEPS)),)
--include $(C_DEPS)
-endif
 ifneq ($(strip $(CC_DEPS)),)
 -include $(CC_DEPS)
 endif
-ifneq ($(strip $(CPP_DEPS)),)
--include $(CPP_DEPS)
+ifneq ($(strip $(C++_DEPS)),)
+-include $(C++_DEPS)
+endif
+ifneq ($(strip $(C_UPPER_DEPS)),)
+-include $(C_UPPER_DEPS)
 endif
 ifneq ($(strip $(CXX_DEPS)),)
 -include $(CXX_DEPS)
 endif
-ifneq ($(strip $(C_UPPER_DEPS)),)
--include $(C_UPPER_DEPS)
+ifneq ($(strip $(CPP_DEPS)),)
+-include $(CPP_DEPS)
+endif
+ifneq ($(strip $(C_DEPS)),)
+-include $(C_DEPS)
 endif
 endif
 
@@ -60,7 +60,7 @@ cg: $(OBJS) $(USER_OBJS)
 
 # Other Targets
 clean:
-	-$(RM) $(OBJS)$(C++_DEPS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) cg
+	-$(RM) $(CC_DEPS)$(C++_DEPS)$(EXECUTABLES)$(C_UPPER_DEPS)$(CXX_DEPS)$(OBJS)$(CPP_DEPS)$(C_DEPS) cg
 	-@echo ' '
 
 .PHONY: all clean dependents
