view transformação pronta

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -9,9 +9,15 @@ RM := rm -rf
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include src/viewport/subdir.mk
+-include src/transformacao/tipos/translacao/subdir.mk
+-include src/transformacao/tipos/rotacao/subdir.mk
+-include src/transformacao/tipos/escalonamento/subdir.mk
+-include src/transformacao/tipos/subdir.mk
+-include src/transformacao/subdir.mk
 -include src/modelo.interno/window/subdir.mk
 -include src/modelo.interno/subdir.mk
 -include src/main/subdir.mk
+-include src/dto/transformacao/subdir.mk
 -include src/dto/geometrico/subdir.mk
 -include src/dto/subdir.mk
 -include src/application/subdir.mk
@@ -24,23 +30,23 @@ RM := rm -rf
 -include objects.mk
 
 ifneq ($(MAKECMDGOALS),clean)
-ifneq ($(strip $(CC_DEPS)),)
--include $(CC_DEPS)
-endif
 ifneq ($(strip $(C++_DEPS)),)
 -include $(C++_DEPS)
 endif
-ifneq ($(strip $(C_UPPER_DEPS)),)
--include $(C_UPPER_DEPS)
+ifneq ($(strip $(C_DEPS)),)
+-include $(C_DEPS)
 endif
-ifneq ($(strip $(CXX_DEPS)),)
--include $(CXX_DEPS)
+ifneq ($(strip $(CC_DEPS)),)
+-include $(CC_DEPS)
 endif
 ifneq ($(strip $(CPP_DEPS)),)
 -include $(CPP_DEPS)
 endif
-ifneq ($(strip $(C_DEPS)),)
--include $(C_DEPS)
+ifneq ($(strip $(CXX_DEPS)),)
+-include $(CXX_DEPS)
+endif
+ifneq ($(strip $(C_UPPER_DEPS)),)
+-include $(C_UPPER_DEPS)
 endif
 endif
 
@@ -61,7 +67,7 @@ cg: $(OBJS) $(USER_OBJS)
 
 # Other Targets
 clean:
-	-$(RM) $(CC_DEPS)$(C++_DEPS)$(EXECUTABLES)$(C_UPPER_DEPS)$(CXX_DEPS)$(OBJS)$(CPP_DEPS)$(C_DEPS) cg
+	-$(RM) $(OBJS)$(C++_DEPS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) cg
 	-@echo ' '
 
 .PHONY: all clean dependents
