--- a/Debug/makefile
+++ b/Debug/makefile
@@ -12,6 +12,7 @@ RM := rm -rf
 -include src/modelo.interno/window/subdir.mk
 -include src/modelo.interno/subdir.mk
 -include src/main/subdir.mk
+-include src/dto/transformacao/subdir.mk
 -include src/dto/geometrico/subdir.mk
 -include src/dto/subdir.mk
 -include src/application/subdir.mk
